# ros2_evaluation

./: README.md  calculation_transport_time.cpp  clean_evaltime.bash
README_figure/: eval_method.eps  eval_method.pptx
evaluation/byte_data/: data_128Kbyte.txt  data_16Kbyte.txt  data_256Kbyte.txt  data_256byte.txt  data_2Mbyte.txt  data_32Kbyte.txt  data_4Mbyte.txt  data_512Kbyte.txt  data_512byte.txt  data_64Kbyte.txt  data_8Kbyte.txt
src/interprocess_eval/: CMakeLists.txt  package.xml
src/interprocess_eval/src/: listener_interprocess.cpp  listener_interprocess_single.cpp  talker_interprocess.cpp  talker_interprocess_single.cpp
src/interprocess_remote_eval/: CMakeLists.txt  package.xml
src/interprocess_remote_eval/src/: listener_server_interprocess.cpp  talker_client_interprocess.cpp
src/intraprocess_eval/: CMakeLists.txt  package.xml
src/intraprocess_eval/src/: chat_intraprocess.cpp
