<?xml version="1.0"?>
<!-- <package> -->
<package format="2">
  <name>intraprocess_eval</name>
  <version>0.0.0</version>
  <description>Package containing evaluation intraprocess codes using the rclcpp API.</description>
  <maintainer email="maruyama@hopf.sys.es.osaka-u.ac.jp">Yuya Maruyama</maintainer>
  <license>Apache License 2.0</license>

  <!--  <buildtool_depend>catkin</buildtool_depend> -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!--  <build_depend>roscpp</build_depend> -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>
  <build_depend>std_msgs</build_depend>

  <!--  <run_depend>roscpp</run_depend> -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rmw_implementation</exec_depend>
  <!--  <run_depend>std_msgs</run_depend> -->
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
